...
  Widget _buildTitle() {
    return Container(
      padding: const EdgeInsets.fromLTRB(10, 25, 10, 10),
      child: FittedBox(
        fit: BoxFit.fitWidth,
        child: Text(
          "Выберите используемые кости",
          style: Theme.of(context).textTheme.titleLarge,
          textAlign: TextAlign.center,
        ),
      ),
    );
  }
...
                        icon: const Icon(iconButtonDeleteDiceGroup, color: colorButtonPressedOFF),
                        text: "Удалить",
                        buttonStyle: buttonStyleOFF,
                        onPressed: () {
                          showConfirmationBox(
                              context: context,
                              titleText: 'Удалить группу с игральными костями?',
                              contentText: "Группа \"${diceGroup.name}\" будет удалена со всем содержимым.",
                              textOK: 'Удалить группу',
                              textOFF: 'Отмена',
                              functionOK: () {
                                widget.removeDiceGroupAt_removeDisplayedDictGroupAt(index).then((state) {
                                  Navigator.pop(context);
                                  setState(() {});
                                  widget.onDelete();
                                  if (state) {
...
                        icon: const Icon(iconButtonDeleteDice, color: colorButtonPressedOFF),
                        text: "Удалить",
                        buttonStyle: buttonStyleOFF,
                        onPressed: () {
                          showConfirmationBox(
                              context: context,
                              titleText: 'Удалить игральную кость?',
                              contentText: "Игральная кость с ${dice.numberFaces} гранями будет удалена.",
                              textOK: 'Удалить игральную кость',
                              textOFF: 'Отмена',
                              functionOK: () {
                                diceGroup.removeDiceAt(index).then((state) {
                                  Navigator.pop(context);
                                  setState(() {});
                                  widget.onDelete();
...
