...
      context: context,
      builder: (BuildContext context) {
        return AlertDialog(
          insetPadding: EdgeInsets.zero,
          // backgroundColor: Theme.of(context).colorScheme.surface,
          actionsAlignment: MainAxisAlignment.spaceAround,
          title: const Text("Редактирование группы", textAlign: TextAlign.center),
          titleTextStyle: Theme.of(context).textTheme.titleLarge,
          content: Column(
            mainAxisSize: MainAxisSize.min,
            children: [
              const Text("Название группы:"),
              Row(
                children: [
                  Expanded(
                    child: TextField(
                      textAlign: TextAlign.center,
                      controller: controller,
...
