...
          ),
        ],
        centerTitle: true,
        title: FittedBox(
          fit: BoxFit.fitWidth,
          child: Text(
            "Универсальные игральные кости",
            style: TextStyle(
              fontFamily: "Oswald",
              color: Theme.of(context).colorScheme.primary,
              fontWeight: FontWeight.bold,
            ),
          ),
...
